# chinampa

./: .gitignore  Cargo.toml  Development.md  README.md  chnm.toml
.github/workflows/: ci.yml  deploy.yml  release.yml
crates/chnm-cli/: Cargo.toml
crates/chnm-cli/src/: main.rs
crates/chnm-core/: Cargo.toml
crates/chnm-core/src/: lib.rs
crates/chnm-web/: Cargo.toml  Trunk.toml  index.html
crates/chnm-web/data/: 7GK2PQ8X.json  index.json
crates/chnm-web/public/: CNAME  style.css
crates/chnm-web/src/: app.rs  inat.rs  main.rs
tags/: 4MNP9RST.md  52FS6WDE.md  7GK2PQ8X.md
