[workspace]
resolver = "2"
members = ["crates/chnm-core", "crates/chnm-cli", "crates/chnm-web"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fede2/chinampa"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
