[package]
name = "chnm-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "chnm"
path = "src/main.rs"

[dependencies]
chnm-core = { path = "../chnm-core" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
walkdir = "2"
