[package]
name = "chnm-web"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "chnm-web"
path = "src/main.rs"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_router = { version = "0.7" }
serde = { workspace = true }
serde_json = { workspace = true }
gloo-net = { version = "0.6", features = ["http"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
